--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <h1>Odin Recipes</h1>
 <ul>
     <li><a href="recipes/clementine_chicken.html" target="_blank">Clementine Chicken</a></li>
+    <li><a href="recipes/tomato_white_bean_salad.html" target="_blank">Tomato White Bean Salad</a></li>
+    <li><a href="recipes/chocolate_lava_cake.html" target="_blank">Chocolate Lava Cake</a></li>
 </ul>
 </html>
 
