set style for recipe website

--- a/recipes/chocolate_lava_cake.html
+++ b/recipes/chocolate_lava_cake.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate Lava Cake</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <!-- <a href="../index.html">Odin Recipes Home</a> -->
     <h1>Chocolate Lava Cake</h1>
     <img src="../images/chocolate-lava_cake.png" alt="Chocolate Lava Cake">
     <p>From their big debut in the 1990s from chef Jean-Georges Vongerichten to their ever-presence on dessert menus since, chocolate molten lava cakes are easily one of the most trodden tropes of the restaurant world. There are enough riffs on it out there to fill two internets; does anyone need another? The Smitten Kitchen has been lava cake-free since its 2006 inception mostly because I’m not terribly into warm, oozy desserts (I KNOW). But it’s not just about me anymore, is it? Last Valentines I had a moment of glowy domestic benevolence and decided to make them for the family and blew each and every one of their minds, most especially my husband, who demanded to know if I had known how to make them all along, why had I waited so long? Fair enough.</p>
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
     <ul>
         <li>Heat oven to 450 degrees F. Butter two 6-ounce ramekins or baking cups, making sure not to miss any spots. Spoon a little cocoa powder in each and pat it around so it coats the bottom and sides, then knock the excess out.</li>
         <li>2 teaspoons cocoa powder, plus more for dusting</li>
@@ -20,7 +21,7 @@
         <li>1 large egg</li>
         <li>1 egg yolk</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
     <ol>
         <li>Put the first six ingredients in a large mixing bowl and 
             add 2½ teaspoons of salt and 1½ teaspoons of black pepper. 
