--- a/recipes/clementine_chicken.html
+++ b/recipes/clementine_chicken.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clementine Chicken</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Clementine Chicken</h1>
@@ -13,7 +14,7 @@
         somehow manage to come together in a sweetly comforting dish 
         you will always want to come back to. Serve with plainly cooked 
         rice or bulgar.</p>
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
     <ul>
         <li>100ml arak, ouzo or Pernod</li>
         <li>4 tbsp olive oil</li>
@@ -32,7 +33,7 @@
         <li>salt and black pepper</li>
         <li>chopped flat-leaf parsley, to garnish</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
     <ol>
         <li>Put the first six ingredients in a large mixing bowl and 
             add 2½ teaspoons of salt and 1½ teaspoons of black pepper. 
