--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Ally and Corwin's Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<h1>Odin Recipes</h1>
+<h1>Ally and Corwin's Recipes</h1>
 <ul>
     <li><a href="recipes/clementine_chicken.html" target="_blank">Clementine Chicken</a></li>
     <li><a href="recipes/tomato_white_bean_salad.html" target="_blank">Tomato White Bean Salad</a></li>
