--- a/recipes/tomato_white_bean_salad.html
+++ b/recipes/tomato_white_bean_salad.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tomato White Bean Salad</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Tomato White Bean Salad</h1>
     <img src="../images/tomato-white-bean-salad.jpeg" alt="tomato white bean salad">
     <p>This simple salad makes a bright, tangy companion to grilled meat or fish. Marinating the red onions and garlic in the vinaigrette for 15 minutes not only diffuses their flavor but also softens their bite. This salad travels well and would be an excellent choice for a potluck or picnic. It’s also supremely versatile, and can be dressed up with any soft herb like basil, tarragon or mint, and chile, in almost any form.</p>
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
     <ul>
         <li>¼cup olive oil</li>
         <li>3tablespoons red wine vinegar</li>
@@ -24,7 +25,7 @@
         <li>⅓cup chopped fresh parsley</li>
         <li>½cup shaved Parmesan (about 2 ounces)</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
     <ol>
         <li>In a small bowl, whisk together the olive oil, vinegar, salt, mustard and pepper. Stir in the red onion and garlic and set the dressing aside to marinate for 15 to 30 minutes at room temperature.</li>
         <li>Place the tomatoes, white beans and parsley in a large bowl. Pour the dressing over the salad, toss well, then gently fold in the Parmesan. Serve at room temperature using a slotted spoon.</li>
