thumbnail recipe images for added style

--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
 </head>
 <h1>Ally and Corwin's Recipes</h1>
 <ul>
-    <li><a href="recipes/clementine_chicken.html" target="_blank">Clementine Chicken</a></li>
-    <li><a href="recipes/tomato_white_bean_salad.html" target="_blank">Tomato White Bean Salad</a></li>
-    <li><a href="recipes/chocolate_lava_cake.html" target="_blank">Chocolate Lava Cake</a></li>
+    <li>
+        <a 
+        href="recipes/clementine_chicken.html" target="_blank">Clementine Chicken
+        </a>
+        <img class="list_img" src="images/clementine_chicken.png" alt="clementine chicken"> 
+    </li>
+
+    <li>
+        <a 
+        href="recipes/tomato_white_bean_salad.html" target="_blank">Tomato White Bean Salad
+        </a>
+        <img class="list_img" src="images/tomato-white-bean-salad.jpeg" alt="tomato white bean salad">
+    </li>
+    <li>
+        <a 
+        href="recipes/chocolate_lava_cake.html" target="_blank">Chocolate Lava Cake
+        </a> 
+        <img class="list_img" src="images/chocolate-lava_cake.png" alt="Chocolate Lava Cake"
+        > 
+    </li>
 </ul>
 </html>
 
